# Pico-FOC

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/hardware_specific_examples/: CMakeLists.txt
examples/hardware_specific_examples/B_G431B_ESC1/: B_G431B_ESC1.cpp
examples/hardware_specific_examples/DRV8302_driver/esp32_current_control_low_side/: esp32_current_control_low_side.cpp
examples/hardware_specific_examples/DRV8302_driver/stm32_current_control_low_side/: stm32_current_control_low_side.cpp
examples/hardware_specific_examples/SimpleFOCMini/angle_control/: angle_control.cpp
examples/hardware_specific_examples/Smart_Stepper/smartstepper_control/: smartstepper_control.cpp
examples/motion_control/: CMakeLists.txt
examples/motion_control/open_loop_motor_control/: CMakeLists.txt
examples/motion_control/open_loop_motor_control/open_loop_position_example/: CMakeLists.txt  open_loop_position_example.cpp
examples/motor_commands_serial_examples/: CMakeLists.txt
examples/osc_control_examples/: README.md
examples/osc_control_examples/osc_esp32_3pwm/: osc_esp32_3pwm.ino
examples/osc_control_examples/osc_esp32_fullcontrol/: osc_esp32_fullcontrol.ino
examples/utils/: CMakeLists.txt
src/: BLDCMotor.cpp  BLDCMotor.h  CMakeLists.txt  SimpleFOC.h  StepperMotor.cpp  StepperMotor.h
src/common/: defaults.h  foc_utils.cpp  foc_utils.h  lowpass_filter.cpp  lowpass_filter.h  pid.cpp  pid.h  time_utils.cpp
src/common/base_classes/: BLDCDriver.h  CurrentSense.cpp  CurrentSense.h  FOCMotor.cpp  FOCMotor.h  Sensor.cpp  Sensor.h  StepperDriver.h
src/communication/: Commander.cpp  Commander.h  SimpleFOCDebug.h  StepDirListener.cpp  StepDirListener.h  commands.h
src/current_sense/: GenericCurrentSense.cpp  GenericCurrentSense.h  InlineCurrentSense.cpp  InlineCurrentSense.h  LowsideCurrentSense.cpp  LowsideCurrentSense.h  hardware_api.h
src/current_sense/hardware_specific/: generic_mcu.cpp
src/current_sense/hardware_specific/rp2040/: rp2040_mcu.cpp  rp2040_mcu.h
src/drivers/: BLDCDriver3PWM.cpp  BLDCDriver3PWM.h  BLDCDriver6PWM.cpp  BLDCDriver6PWM.h  StepperDriver2PWM.cpp  StepperDriver2PWM.h  StepperDriver4PWM.cpp  StepperDriver4PWM.h  hardware_api.h
src/drivers/hardware_specific/: generic_mcu.cpp
src/drivers/hardware_specific/rp2040/: rp2040_mcu.cpp  rp2040_mcu.h
src/sensors/: Encoder.cpp  Encoder.h  GenericSensor.cpp  GenericSensor.h  HallSensor.cpp  HallSensor.h  MagneticSensorAnalog.cpp  MagneticSensorAnalog.h  MagneticSensorI2C.cpp  MagneticSensorI2C.h  MagneticSensorPWM.cpp  MagneticSensorPWM.h  MagneticSensorSPI.cpp  MagneticSensorSPI.h
(+65 files in other folders)
